fix: validation fixes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -233,7 +233,7 @@
             <div class="title">Замовляй пробний день зараз!</div>
             <form action="#" class="order__form">
                 <input required placeholder="Ваше ім'я" name="name" type="text" class="order__input">
-                <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="order__input">
+                <input placeholder="Ваш номер телефона" name="phone" type="number" class="order__input">
                 <img src="icons/right.svg" alt="right">
                 <button class="btn btn_dark btn_min">Передзвонити мені</button>
             </form>
@@ -291,7 +291,7 @@
             <div class="call">
                 <div class="subtitle">Або зателефонуйте нам</div>
                 <a href="tel:+380637777777" class="link">+38 (063) 777-77-77</a>
-                <a href="tel:+380637777777" class="link">+38 (067) 777-77-77</a>
+                <a href="tel:+380677777777" class="link">+38 (067) 777-77-77</a>
             </div>
         </div>
         <div class="copyright">
@@ -306,7 +306,7 @@
                     <div data-close class="modal__close">&times;</div>
                     <div class="modal__title">Ми зв'яжемося з вами якнайшвидше!</div>
                     <input required placeholder="Ваше ім'я" name="name" type="text" class="modal__input">
-                    <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="modal__input">
+                    <input required placeholder="Ваш номер телефона" name="phone" type="number" class="modal__input">
                     <button class="btn btn_dark btn_min">Передзвонити мені</button>
                 </form>
             </div>
