--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <div class="title">Замовляй пробний день зараз!</div>
             <form action="#" class="order__form">
                 <input required placeholder="Ваше ім'я" name="name" type="text" class="order__input">
-                <input placeholder="Ваш номер телефона" name="phone" type="number" class="order__input">
+                <input placeholder="Ваш номер телефона" name="phone" type="tel" class="order__input">
                 <img src="icons/right.svg" alt="right">
                 <button class="btn btn_dark btn_min">Передзвонити мені</button>
             </form>
@@ -306,7 +306,7 @@
                     <div data-close class="modal__close">&times;</div>
                     <div class="modal__title">Ми зв'яжемося з вами якнайшвидше!</div>
                     <input required placeholder="Ваше ім'я" name="name" type="text" class="modal__input">
-                    <input required placeholder="Ваш номер телефона" name="phone" type="number" class="modal__input">
+                    <input required placeholder="Ваш номер телефона" name="phone" type="tel" class="modal__input">
                     <button class="btn btn_dark btn_min">Передзвонити мені</button>
                 </form>
             </div>
