Add tag 'p' for text blocks

--- a/index.html
+++ b/index.html
@@ -45,25 +45,33 @@
                 <div class="tabcontent">
                     <img src="img/tabs/vegy.jpg" alt="vegy">
                     <div class="tabcontent__descr">
-                        Меню "Фітнес" - це новий підхід до приготування страв: більше свіжих овочів та фруктів. Для людей, які цікавляться спортом; активних та здорових. Це абсолютно новий продукт з оптимальною ціною та високою якістю!
+                        <p>
+                            Меню "Фітнес" - це новий підхід до приготування страв: більше свіжих овочів та фруктів. Для людей, які цікавляться спортом; активних та здорових. Це абсолютно новий продукт з оптимальною ціною та високою якістю!
+                        </p>
                     </div>
                 </div>
                 <div class="tabcontent">
                     <img src="img/tabs/elite.jpg" alt="elite">
                     <div class="tabcontent__descr">
-                        Меню "Преміум" - ми використовуємо не лише гарний дизайн упаковки, але й якісне виконання страв. Червона риба, морепродукти, фрукти – ресторанне меню без походу до ресторану!                                
+                        <p>
+                            Меню "Преміум" - ми використовуємо не лише гарний дизайн упаковки, але й якісне виконання страв. Червона риба, морепродукти, фрукти – ресторанне меню без походу до ресторану!
+                        </p>
                     </div>
                 </div>
                 <div class="tabcontent">
                     <img src="img/tabs/post.jpg" alt="post">
                     <div class="tabcontent__descr">
-                        Наше спеціальне "Пісне меню" - це ретельний вибір інгредієнтів: повна відсутність продуктів тваринного походження. Повна гармонія з собою та природою в кожному елементі! Все буде Ом!                                  
+                        <p>
+                            Наше спеціальне "Пісне меню" - це ретельний вибір інгредієнтів: повна відсутність продуктів тваринного походження. Повна гармонія з собою та природою в кожному елементі! Все буде Ом!
+                        </p>
                     </div>
                 </div>
                 <div class="tabcontent">
                     <img src="img/tabs/balanced.jpg" alt="vegy">
                     <div class="tabcontent__descr">
+                       <p>
                         Меню "Збалансоване" – це відповідність вашого раціону всім науковим рекомендаціям. Ми ретельно прораховуємо вашу потребу в к/б/ж/в та створюємо найкращі страви для вас.
+                       </p>
                     </div>
                 </div>
                 <div class="tabheader">
@@ -88,7 +96,9 @@
             <div class="offer__text">
                 <h2 class="title">Що ми можемо запропонувати вам?</h2>
                 <div class="offer__descr">
-                    Наша основна ідея – це правильне харчування. Воно може бути простим та смачним. Ми не просто доставки, ми сервіс! Ми взяли на себе всі розрахунки БЖУ, калорійності, обсягів порцій та інші важливі, але нудні аспекти. Вам залишається лише корисна, ситна та правильна їжа, яку ми привозимо прямо під двері.
+                    <p>
+                        Наша основна ідея – це правильне харчування. Воно може бути простим та смачним. Ми не просто доставки, ми сервіс! Ми взяли на себе всі розрахунки БЖУ, калорійності, обсягів порцій та інші важливі, але нудні аспекти. Вам залишається лише корисна, ситна та правильна їжа, яку ми привозимо прямо під двері.
+                    </p>
                 </div>
             </div>
             <div class="offer__action">
@@ -99,11 +109,15 @@
             <div class="offer__advantages">
                 <h2>Швидко та корисно</h2>
                 <div class="offer__advantages-text">
-                    Готування вдома займає багато сил, часу та нервів. Ми привозимо їжу відразу на цілий день, і ти можеш діяти так, як тобі зручно, не підлаштовуючись ні під кого і впевнений як продукт!
+                    <p>
+                        Готування вдома займає багато сил, часу та нервів. Ми привозимо їжу відразу на цілий день, і ти можеш діяти так, як тобі зручно, не підлаштовуючись ні під кого і впевнений як продукт!
+                    </p>
                 </div>
                 <h2>Правильний раціон</h2>
                 <div class="offer__advantages-text">
-                    Ми розробили спеціальне меню, де враховано всі нюанси правильного харчування, від балансу БЖУ до їхнього приготування та дроблення раціону.
+                    <p>
+                        Ми розробили спеціальне меню, де враховано всі нюанси правильного харчування, від балансу БЖУ до їхнього приготування та дроблення раціону.
+                    </p>
                 </div>
             </div>
             <div class="offer__slider">
@@ -197,7 +211,7 @@
                 <div class="menu__item">
                     <img src="img/tabs/vegy.jpg" alt="vegy">
                     <h3 class="menu__item-subtitle">Меню "Фітнес"</h3>
-                    <div class="menu__item-descr">Меню "Фітнес" - це новий підхід до приготування страв: більше свіжих овочів та фруктів. Продукт активних та здорових людей. Це абсолютно новий продукт з оптимальною ціною та високою якістю!</div>
+                    <div class="menu__item-descr"><p>Меню "Фітнес" - це новий підхід до приготування страв: більше свіжих овочів та фруктів. Продукт активних та здорових людей. Це абсолютно новий продукт з оптимальною ціною та високою якістю!</p></div>
                     <div class="menu__item-divider"></div>
                     <div class="menu__item-price">
                         <div class="menu__item-cost">Ціна:</div>
@@ -207,7 +221,7 @@
                 <div class="menu__item">
                     <img src="img/tabs/post.jpg" alt="post">
                     <h3 class="menu__item-subtitle">Меню "Пістне"</h3>
-                    <div class="menu__item-descr">Меню "Пістне" - це ретельний підбір інгредієнтів: повна відсутність продуктів тваринного походження, молоко з мигдалю, вівса, кокосу чи гречки, правильна кількість білків за рахунок тофу та імпортних вегетаріанських стейків.</div>
+                    <div class="menu__item-descr"><p>Меню "Пістне" - це ретельний підбір інгредієнтів: повна відсутність продуктів тваринного походження, молоко з мигдалю, вівса, кокосу чи гречки, правильна кількість білків за рахунок тофу та імпортних вегетаріанських стейків.</p></div>
                     <div class="menu__item-divider"></div>
                     <div class="menu__item-price">
                         <div class="menu__item-cost">Ціна:</div>
@@ -217,7 +231,9 @@
                 <div class="menu__item">
                     <img src="img/tabs/elite.jpg" alt="elite">
                     <h3 class="menu__item-subtitle">Меню "Преміум"</h3>
-                    <div class="menu__item-descr">У меню "Преміум" ми використовуємо не лише гарний дизайн упаковки, але й якісне виконання страв. Червона риба, морепродукти, фрукти – ресторанне меню без походу до ресторану! </div>
+                    <div class="menu__item-descr"><p>
+                        У меню "Преміум" ми використовуємо не лише гарний дизайн упаковки, але й якісне виконання страв. Червона риба, морепродукти, фрукти – ресторанне меню без походу до ресторану!
+                    </p></div>
                     <div class="menu__item-divider"></div>
                     <div class="menu__item-price">
                         <div class="menu__item-cost">Ціна:</div>
@@ -248,10 +264,12 @@
             <div class="promotion__text">
                 <div class="title">Акція для нових клієнтів!</div>
                 <div class="promotion__descr">
-                    Ми цінуємо кожного клієнта та пропонуємо вам стати одним із них на дуже вигідних умовах.
+                    <p>
+                        Ми цінуємо кожного клієнта та пропонуємо вам стати одним із них на дуже вигідних умовах.
                     Кожному, хто замовить доставку харчування на тиждень, буде надано знижку у розмірі <span>20%!</span>
                     <br><br>
-                    Акція закінчиться 6 липня о 00:00 
+                    Акція закінчиться 6 липня о 00:00
+                    </p>
                 </div>
             </div>
             <div class="promotion__timer">
@@ -295,7 +313,7 @@
             </div>
         </div>
         <div class="copyright">
-            Project Food © <a href="https://github.com/AndreyBalan" target="_blank" class="link">Andrew Balan</a> 
+            Project Food © <a href="https://github.com/AndreyBalan" target="_blank" class="link">Andrew Balan</a>
         </div>
     </footer>
 
