Add metatags for site;

--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
+    <title>Project Food - Andrew Balan</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Food - Andrew Balan</title>
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/style.css">
+    <meta name="description" content="Наша основна ідея – це правильне харчування. Воно може бути простим та смачним. Ми не просто доставки, ми сервіс! Ми взяли на себе всі розрахунки БЖУ, калорійності, обсягів порцій та інші важливі, але нудні аспекти. Вам залишається лише корисна, ситна та правильна їжа, яку ми привозимо прямо під двері.">
+
+    <!-- Можеш прочитати про Open "Graph Meta Tags" - https://ahrefs.com/blog/open-graph-meta-tags/ -->
+    <meta property="og:site_name" content="Project Food">
+    <meta property="og:title" content="Project Food - Andrew Balan" />
+    <meta property="og:description" content="Наша основна ідея – це правильне харчування. Воно може бути простим та смачним. Ми не просто доставки, ми сервіс! Ми взяли на себе всі розрахунки БЖУ, калорійності, обсягів порцій та інші важливі, але нудні аспекти. Вам залишається лише корисна, ситна та правильна їжа, яку ми привозимо прямо під двері." />
+    <meta property="twitter:description" content="Наша основна ідея – це правильне харчування. Воно може бути простим та смачним. Ми не просто доставки, ми сервіс! Ми взяли на себе всі розрахунки БЖУ, калорійності, обсягів порцій та інші важливі, але нудні аспекти. Вам залишається лише корисна, ситна та правильна їжа, яку ми привозимо прямо під двері." />
+    <meta name="keywords" content="foodie, delicious, gourmet, tasty, culinary, gastronomy, flavors, fresh, farm-to-table, healthy, nutritious, local, organic, artisan, recipes, cooking, restaurant, fine dining, food exploration, taste sensations">
+    <meta property="og:image" content="img/tabs/vegy.jpg" />
+    <meta property="twitter:image" content="img/tabs/vegy.jpg" />
 </head>
 <body>
     <header class="header">
