Add attributes to image tag;

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="header__left-block">
             <div class="header__logo">
                 <a href="index.html">
-                    <img src="icons/logo.svg" alt="Логотип">
+                    <img src="icons/logo.svg" alt="Project Food" width="119" height="35" title="Project Food - Andrew Balan">
                 </a>
             </div>
             <nav class="header__links">
@@ -40,11 +40,11 @@
     <div class="sidepanel">
         <div class="sidepanel__text"><span>Соціальні мережі</span></div>
         <div class="sidepanel__divider"></div>
-        <a href="https://www.facebook.com/" target="_blank" class="sidepanel__icon">
-            <img src="icons/instagram.svg" alt="instagram">
+        <a href="https://www.facebook.com/" target="_blank" class="sidepanel__icon" rel="me">
+            <img src="icons/instagram.svg" alt="instagram" width="256" height="256">
         </a>
-        <a href="https://www.instagram.com/" target="_blank" class="sidepanel__icon">
-            <img src="icons/facebook.svg" alt="facebook">
+        <a href="https://www.instagram.com/" target="_blank" class="sidepanel__icon" rel="me">
+            <img height="144" width="144" src="icons/facebook.svg" alt="facebook">
         </a>
     </div>
 
@@ -53,7 +53,7 @@
         <div class="container">
             <div class="tabcontainer">
                 <div class="tabcontent">
-                    <img src="img/tabs/vegy.jpg" alt="vegy">
+                    <img src="img/tabs/vegy.jpg" alt="vegy" width="1920" height="1280" title="...">
                     <div class="tabcontent__descr">
                         <p>
                             Меню "Фітнес" - це новий підхід до приготування страв: більше свіжих овочів та фруктів. Для людей, які цікавляться спортом; активних та здорових. Це абсолютно новий продукт з оптимальною ціною та високою якістю!
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="tabcontent">
-                    <img src="img/tabs/elite.jpg" alt="elite">
+                    <img src="img/tabs/elite.jpg" width="1920" height="1326" alt="elite" title="...">
                     <div class="tabcontent__descr">
                         <p>
                             Меню "Преміум" - ми використовуємо не лише гарний дизайн упаковки, але й якісне виконання страв. Червона риба, морепродукти, фрукти – ресторанне меню без походу до ресторану!
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="tabcontent">
-                    <img src="img/tabs/post.jpg" alt="post">
+                    <img src="img/tabs/post.jpg" alt="post" width="1920" height="1536" alt="elite" title="...">
                     <div class="tabcontent__descr">
                         <p>
                             Наше спеціальне "Пісне меню" - це ретельний вибір інгредієнтів: повна відсутність продуктів тваринного походження. Повна гармонія з собою та природою в кожному елементі! Все буде Ом!
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="tabcontent">
-                    <img src="img/tabs/balanced.jpg" alt="vegy">
+                    <img src="img/tabs/balanced.jpg" alt="vegy" width="1920" height="1382" alt="elite" title="...">
                     <div class="tabcontent__descr">
                        <p>
                         Меню "Збалансоване" – це відповідність вашого раціону всім науковим рекомендаціям. Ми ретельно прораховуємо вашу потребу в к/б/ж/в та створюємо найкращі страви для вас.
@@ -133,28 +133,28 @@
             <div class="offer__slider">
                 <div class="offer__slider-counter">
                     <div class="offer__slider-prev">
-                        <img src="icons/left.svg" alt="prev">
+                        <img src="icons/left.svg" alt="prev"  width="38" height="5">
                     </div>
                     <span id="current">03</span>
                     /
                     <span id="total">04</span>
                     <div class="offer__slider-next">
-                        <img src="icons/right.svg" alt="next">
+                        <img src="icons/right.svg" alt="next" width="38" height="5">
                     </div>
                 </div>
                 <div class="offer__slider-wrapper">
                     <div class="offer__slider-inner">
                         <div class="offer__slide">
-                            <img src="img/slider/food-12.jpg" alt="pepper">
+                            <img src="img/slider/food-12.jpg" alt="pepper" width="640" height="427">
                         </div>
                         <div class="offer__slide">
-                            <img src="img/slider/pepper.jpg" alt="food">
+                            <img src="img/slider/pepper.jpg" alt="food" width="640" height="427">
                         </div>
                         <div class="offer__slide">
-                            <img src="img/slider/olive-oil.jpg" alt="oil">
+                            <img src="img/slider/olive-oil.jpg" alt="oil" width="640" height="427">
                         </div>
                         <div class="offer__slide">
-                            <img src="img/slider/paprika.jpg" alt="paprika">
+                            <img src="img/slider/paprika.jpg" alt="paprika" width="640" height="427">
                         </div>
                     </div>
                 </div>
@@ -219,7 +219,7 @@
         <div class="menu__field">
             <div class="container">
                 <div class="menu__item">
-                    <img src="img/tabs/vegy.jpg" alt="vegy">
+                    <img src="img/tabs/vegy.jpg" alt="vegy" width="1920" height="1280" title="...">
                     <h3 class="menu__item-subtitle">Меню "Фітнес"</h3>
                     <div class="menu__item-descr"><p>Меню "Фітнес" - це новий підхід до приготування страв: більше свіжих овочів та фруктів. Продукт активних та здорових людей. Це абсолютно новий продукт з оптимальною ціною та високою якістю!</p></div>
                     <div class="menu__item-divider"></div>
@@ -229,7 +229,7 @@
                     </div>
                 </div>
                 <div class="menu__item">
-                    <img src="img/tabs/post.jpg" alt="post">
+                    <img src="img/tabs/post.jpg" width="1920" height="1326" alt="elite" title="...">
                     <h3 class="menu__item-subtitle">Меню "Пістне"</h3>
                     <div class="menu__item-descr"><p>Меню "Пістне" - це ретельний підбір інгредієнтів: повна відсутність продуктів тваринного походження, молоко з мигдалю, вівса, кокосу чи гречки, правильна кількість білків за рахунок тофу та імпортних вегетаріанських стейків.</p></div>
                     <div class="menu__item-divider"></div>
@@ -239,7 +239,7 @@
                     </div>
                 </div>
                 <div class="menu__item">
-                    <img src="img/tabs/elite.jpg" alt="elite">
+                    <img src="img/tabs/elite.jpg" alt="elite" width="1920" height="1326" alt="elite" title="...">
                     <h3 class="menu__item-subtitle">Меню "Преміум"</h3>
                     <div class="menu__item-descr"><p>
                         У меню "Преміум" ми використовуємо не лише гарний дизайн упаковки, але й якісне виконання страв. Червона риба, морепродукти, фрукти – ресторанне меню без походу до ресторану!
@@ -260,7 +260,7 @@
             <form action="#" class="order__form">
                 <input required placeholder="Ваше ім'я" name="name" type="text" class="order__input">
                 <input placeholder="Ваш номер телефона" name="phone" type="tel" class="order__input">
-                <img src="icons/right.svg" alt="right">
+                <img src="icons/right.svg" alt="right" width="38" height="5">
                 <button class="btn btn_dark btn_min">Передзвонити мені</button>
             </form>
         </div>
@@ -310,11 +310,11 @@
         <div class="container">
             <div class="social">
                 <div class="subtitle">Ми в соціальних мережах:</div>
-                <a href="https://www.instagram.com/" target="_blank" class="link">Instagram</a>
-                <a href="https://www.facebook.com/" target="_blank" class="link">Facebook</a>
+                <a href="https://www.instagram.com/" target="_blank" class="link" rel="me">Instagram</a>
+                <a href="https://www.facebook.com/" target="_blank" class="link" rel="me">Facebook</a>
             </div>
             <div class="pepper">
-                <img src="icons/veg.png" alt="pepper">
+                <img src="icons/veg.png" alt="pepper" width="42" height="49">
             </div>
             <div class="call">
                 <div class="subtitle">Або зателефонуйте нам</div>
