Fix input type for number field;

--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
                     Ваші параметри
                 </div>
                 <div class="calculating__choose calculating__choose_medium">
-                    <input type="text" id="height" placeholder="Введіть ріст" class="calculating__choose-item">
-                    <input type="text" id="weight" placeholder="Введіть вагу"  class="calculating__choose-item">
-                    <input type="text" id="age" placeholder="Введіть вік" class="calculating__choose-item">
+                    <input type="number" id="height" placeholder="Введіть ріст" class="calculating__choose-item">
+                    <input type="number" id="weight" placeholder="Введіть вагу"  class="calculating__choose-item">
+                    <input type="number" id="age" placeholder="Введіть вік" class="calculating__choose-item">
                 </div>
 
                 <div class="calculating__subtitle">
