Fix my problem with validator.w3.org;

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     <!-- Можеш прочитати про Open "Graph Meta Tags" - https://ahrefs.com/blog/open-graph-meta-tags/ -->
     <meta property="og:site_name" content="Project Food">
-    <meta property="og:title" content="Project Food - Andrew Balan" />
-    <meta property="og:description" content="Наша основна ідея – це правильне харчування. Воно може бути простим та смачним. Ми не просто доставки, ми сервіс! Ми взяли на себе всі розрахунки БЖУ, калорійності, обсягів порцій та інші важливі, але нудні аспекти. Вам залишається лише корисна, ситна та правильна їжа, яку ми привозимо прямо під двері." />
-    <meta property="twitter:description" content="Наша основна ідея – це правильне харчування. Воно може бути простим та смачним. Ми не просто доставки, ми сервіс! Ми взяли на себе всі розрахунки БЖУ, калорійності, обсягів порцій та інші важливі, але нудні аспекти. Вам залишається лише корисна, ситна та правильна їжа, яку ми привозимо прямо під двері." />
+    <meta property="og:title" content="Project Food - Andrew Balan" >
+    <meta property="og:description" content="Наша основна ідея – це правильне харчування. Воно може бути простим та смачним. Ми не просто доставки, ми сервіс! Ми взяли на себе всі розрахунки БЖУ, калорійності, обсягів порцій та інші важливі, але нудні аспекти. Вам залишається лише корисна, ситна та правильна їжа, яку ми привозимо прямо під двері." >
+    <meta property="twitter:description" content="Наша основна ідея – це правильне харчування. Воно може бути простим та смачним. Ми не просто доставки, ми сервіс! Ми взяли на себе всі розрахунки БЖУ, калорійності, обсягів порцій та інші важливі, але нудні аспекти. Вам залишається лише корисна, ситна та правильна їжа, яку ми привозимо прямо під двері." >
     <meta name="keywords" content="foodie, delicious, gourmet, tasty, culinary, gastronomy, flavors, fresh, farm-to-table, healthy, nutritious, local, organic, artisan, recipes, cooking, restaurant, fine dining, food exploration, taste sensations">
-    <meta property="og:image" content="img/tabs/vegy.jpg" />
-    <meta property="twitter:image" content="img/tabs/vegy.jpg" />
+    <meta property="og:image" content="img/tabs/vegy.jpg" >
+    <meta property="twitter:image" content="img/tabs/vegy.jpg" >
 </head>
 <body>
     <header class="header">
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="tabcontent">
-                    <img src="img/tabs/post.jpg" alt="post" width="1920" height="1536" alt="elite" title="...">
+                    <img src="img/tabs/post.jpg" alt="post" width="1920" height="1536" title="...">
                     <div class="tabcontent__descr">
                         <p>
                             Наше спеціальне "Пісне меню" - це ретельний вибір інгредієнтів: повна відсутність продуктів тваринного походження. Повна гармонія з собою та природою в кожному елементі! Все буде Ом!
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="tabcontent">
-                    <img src="img/tabs/balanced.jpg" alt="vegy" width="1920" height="1382" alt="elite" title="...">
+                    <img src="img/tabs/balanced.jpg" alt="vegy" width="1920" height="1382" title="...">
                     <div class="tabcontent__descr">
                        <p>
                         Меню "Збалансоване" – це відповідність вашого раціону всім науковим рекомендаціям. Ми ретельно прораховуємо вашу потребу в к/б/ж/в та створюємо найкращі страви для вас.
@@ -239,7 +239,7 @@
                     </div>
                 </div>
                 <div class="menu__item">
-                    <img src="img/tabs/elite.jpg" alt="elite" width="1920" height="1326" alt="elite" title="...">
+                    <img src="img/tabs/elite.jpg" alt="elite" width="1920" height="1326" title="...">
                     <h3 class="menu__item-subtitle">Меню "Преміум"</h3>
                     <div class="menu__item-descr"><p>
                         У меню "Преміум" ми використовуємо не лише гарний дизайн упаковки, але й якісне виконання страв. Червона риба, морепродукти, фрукти – ресторанне меню без походу до ресторану!
