Add normalize.css to project;

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico">
+    <!-- Гарний тон скидувати стилі браузерів (чи то нормалізувати) -->
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <meta name="description" content="Наша основна ідея – це правильне харчування. Воно може бути простим та смачним. Ми не просто доставки, ми сервіс! Ми взяли на себе всі розрахунки БЖУ, калорійності, обсягів порцій та інші важливі, але нудні аспекти. Вам залишається лише корисна, ситна та правильна їжа, яку ми привозимо прямо під двері.">
 
